# sim_rework

./: CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt  README.md  main.cpp
app/include/: Application.hpp  ImGuiConsoleSink.hpp  Screen.hpp
app/include/screens/: MainMenuScreen.hpp  PlaceholderScreen.hpp  WorkspaceScreen.hpp
app/include/vis/: Camera.hpp  Framebuffer.hpp  Loader.hpp  SphereGenerator.hpp
app/include/vis/entities/: Entity.hpp  Light.hpp
app/include/vis/models/: ModelTexture.hpp  RawModel.hpp  TexturedModel.hpp
app/include/vis/render/: EntityRenderer.hpp  GridRenderer.hpp  MasterRenderer.hpp  StarfieldRenderer.hpp
app/include/vis/shaders/: EntityShader.hpp  LineShader.hpp  ShaderProgram.hpp  StarfieldShader.hpp
app/scripts/: fetch_earth_texture.py
app/shaders/: entity.frag  entity.vert  line.frag  line.vert  starfield.frag  starfield.vert
app/src/: Application.cpp
app/src/screens/: MainMenuScreen.cpp  WorkspaceScreen.cpp
app/src/vis/: Framebuffer.cpp  Loader.cpp  SphereGenerator.cpp  stb_image_impl.c
app/src/vis/render/: EntityRenderer.cpp  GridRenderer.cpp  MasterRenderer.cpp  StarfieldRenderer.cpp
app/src/vis/shaders/: EntityShader.cpp  LineShader.cpp  ShaderProgram.cpp  StarfieldShader.cpp
include/core/: DataRecorder.hpp  EOM.hpp  Integrator.hpp  Logger.hpp  SimConfig.hpp  SimRunner.hpp  State.hpp  Vehicle.hpp  VehicleFactory.hpp
include/math/: Matrix3.hpp  Quaternion.hpp  Rotations.hpp  Vector3.hpp
include/models/: ConstantVelocityTarget.hpp  FirstOrderActuator.hpp  FlatEarthGravity.hpp  IActuator.hpp  IAerodynamics.hpp  IAtmosphere.hpp  IAutopilot.hpp  IGravity.hpp  IGuidance.hpp  IPropulsion.hpp  ISeeker.hpp  ITarget.hpp  IWind.hpp  IdealSeeker.hpp  ManeuveringTarget.hpp  ProNavGuidance.hpp  SimpleAero.hpp  SimpleAutopilot.hpp  SolidRocketMotor.hpp  StationaryTarget.hpp  USStandard1976.hpp
inputs/: default.xml  guided.xml  unguided.xml
sim/: CMakeLists.txt
sim/include/core/: ConfigParser.hpp  EOM.hpp  Logger.hpp  SimConfig.hpp  Vehicle.hpp  VehicleFactory.hpp
sim/include/math/: Matrix3.hpp  Quaternion.hpp
sim/include/models/: IActuator.hpp  IGuidance.hpp  SimpleAero.hpp  SimpleAutopilot.hpp  SolidRocketMotor.hpp  StationaryTarget.hpp
sim/src/: main.cpp
sim/src/core/: ConfigParser.cpp  SimRunner.cpp
sim/src/models/: ConstantVelocityTarget.cpp  FirstOrderActuator.cpp  ManeuveringTarget.cpp  ProNavGuidance.cpp  SimpleAero.cpp  SimpleAutopilot.cpp  StationaryTarget.cpp
sim/tests/: test_atmosphere.cpp  test_gravity.cpp  test_integrator.cpp  test_math.cpp  test_quaternion.cpp
src/: main.cpp
src/core/: ConfigParser.cpp  DataRecorder.cpp  EOM.cpp  Integrator.hpp  State.hpp  VehicleFactory.cpp
src/math/: Matrix.hpp  Rotations.hpp  Vector3.hpp
src/models/: ConstantVelocityTarget.cpp  FirstOrderActuator.cpp  FlatEarthGravity.cpp  IAtmosphere.hpp  IGuidance.hpp  ISeeker.hpp  IdealSeeker.cpp  ManeuveringTarget.cpp  ProNavGuidance.cpp  SimpleAero.cpp  SimpleAutopilot.cpp  SolidRocketMotor.cpp  StationaryTarget.cpp  USStandard1976.cpp
tests/: CMakeLists.txt  test_actuator.cpp  test_aero.cpp  test_autopilot.cpp  test_guidance.cpp  test_propulsion.cpp  test_quaternion.cpp  test_seeker.cpp  test_target.cpp
util/: guided_output.h5  plot_results.py  sim_output.h5
